Style update and link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                     </div>
                     <div class="headInfo">
                         <h5>GitHub</h5>
-                        <button  data-testid="githubURL" ><img style="width: 20px;height: auto;" src="./assets/github.svg" alt="github"></button>
+                        <button  data-testid="githubURL" ><a data-testid="githubURL" href='https://github.com/stephen-gift/personal-and-realtime-data' target="_blank">
+                            <img style="width: 20px;height: auto;" src="./assets/github.svg" alt="github">
+                        </a></button>
                     </div>
                 </div>
             </div>
