--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal and Realtime Data</title>
+    <meta name="description" content="A web page that showcases specific personal and real-time data attributes.">
+    <link rel="icon" type="image/png" href="./assets/profileImg.jpeg"> <!-- Add a favicon (optional) -->
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
